[gd_scene load_steps=16 format=3 uid="uid://dt4uuw0j4luc8"]

[ext_resource type="Texture2D" uid="uid://d2xvgmym8257j" path="res://Sprites/Shadow.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://dfbk3aknjha83" path="res://Models/LilBot.tscn" id="4_ywy82"]
[ext_resource type="Material" uid="uid://064ko04ie1ui" path="res://Models/PlayerAntennaCap.material" id="9"]
[ext_resource type="Material" uid="uid://b725bkffgvsqq" path="res://Models/PlayerMetal.material" id="10"]

[sub_resource type="BoxShape3D" id="18"]
size = Vector3(2, 6, 2)

[sub_resource type="CapsuleMesh" id="2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n4juv"]
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aiu23"]
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true

[sub_resource type="SphereMesh" id="SphereMesh_ykjcg"]
material = SubResource("StandardMaterial3D_aiu23")
radial_segments = 8
rings = 4

[sub_resource type="Curve" id="Curve_65hik"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, -2.0, 0, 1, Vector2(1, -1), -2.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_jodib"]
min_value = -66.43
max_value = 39.72
_data = [Vector2(0, -66.43), 0.0, 106.15, 0, 1, Vector2(1, 39.72), 106.15, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_m7t2p"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, -200), 0.0, 400.0, 0, 1, Vector2(1, 200), 400.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_winrj"]
min_value = 0.5
max_value = 7.0
_data = [Vector2(0.00446428, 7), 0.0, -11.9804, 0, 0, Vector2(0.995536, 0.69853), -0.815689, 0.0, 0, 0]
point_count = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2olmq"]
properties/0/path = NodePath(".:transform")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:is_spectating")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:enemies_destroyed")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:time_alive")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:is_dead")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:powerup_time")
properties/6/spawn = true
properties/6/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3, 0)
script = ExtResource("3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("18")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("2")

[node name="Shadow" type="Sprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, -8.74228e-08, -2, 0, 2, -8.74228e-08, 0, -1.999, 0)
texture = ExtResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0

[node name="Particles" type="CPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_n4juv")
emitting = false
amount = 20
lifetime = 0.1
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 0.24
local_coords = true
mesh = SubResource("SphereMesh_ykjcg")
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
emission_colors = PackedColorArray(0.733333, 0, 0, 1, 0.784314, 0.698039, 0, 1, 0.819608, 0.317647, 0.266667, 1, 0.8, 0.529412, 0.054902, 1, 0.321569, 0.321569, 0.321569, 1)
direction = Vector3(0, 1, 0)
spread = 56.15
initial_velocity_min = 0.25
initial_velocity_max = 100.0
angular_velocity_min = -24.61
angular_velocity_max = 43.08
angular_velocity_curve = SubResource("Curve_65hik")
linear_accel_min = -1.0
linear_accel_max = 1.0
linear_accel_curve = SubResource("Curve_jodib")
radial_accel_min = -1.0
radial_accel_max = 1.0
radial_accel_curve = SubResource("Curve_m7t2p")
scale_amount_min = 0.0
scale_amount_curve = SubResource("Curve_winrj")
anim_speed_min = 11.49
anim_speed_max = 11.49

[node name="LilBot" parent="." instance=ExtResource("4_ywy82")]

[node name="RobotMasterPos" parent="LilBot" index="0"]
transform = Transform3D(0.999848, 0.0174524, 0, -0.0174524, 0.999848, 0, 0, 0, 1, 0, -2.1, 0)

[node name="Antenna" parent="LilBot/RobotMasterPos" index="0"]
transform = Transform3D(0.999848, -0.0174524, 0, 0.0174524, 0.999848, 0, 0, 0, 1, 0, 4.85, 0)

[node name="AnttenaSphere" parent="LilBot/RobotMasterPos/Antenna" index="0"]
surface_material_override/0 = ExtResource("9")

[node name="ArmLeft" parent="LilBot/RobotMasterPos" index="1"]
transform = Transform3D(-4.37114e-08, 1, 0, -0.984808, -4.30473e-08, 0.173648, 0.173648, 7.5904e-09, 0.984808, -1.1, 2.75, -0.3)

[node name="ArmRight" parent="LilBot/RobotMasterPos" index="2"]
transform = Transform3D(-4.37114e-08, 1, 0, -0.984808, -4.30473e-08, -0.173648, -0.173648, -7.5904e-09, 0.984808, 1, 2.75, -0.3)

[node name="Body" parent="LilBot/RobotMasterPos" index="3"]
surface_material_override/0 = ExtResource("10")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_interval = 0.05
delta_interval = 0.01
replication_config = SubResource("SceneReplicationConfig_2olmq")

[node name="Usertag" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.03474, 0)
billboard = 1
text = "Player"
font_size = 256

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="LilBot"]
